--- a/index.html
+++ b/index.html
@@ -35,13 +35,27 @@
   </head>
   <body class="main">
     <!-- Header -->
-    <header class="main-header">
-      <nav class="main-nav">
-        <div class="menu-title"><a href="">Home</a></div>
-        <div class="logo">TAMILTECHY.</div>
-        <div class="menu-title"><a href="">About</a></div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <div class="logo">TAMILTECHY.</div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse nav-menu-text" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Courses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Exercise</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-    </header>
 
     <!-- Main section -->
     <section class="container-fluid bannar-section">
@@ -55,7 +69,7 @@
           </div></div>
         </div>
         <div class="col-md image-div">
-          <img src="./assets/images/2112.w037.n003.99B.p1.99 (2).png" height="90%">
+          <img src="./assets/images/banner_image.png" height="90%">
         </div>
       </div>
     </section>
@@ -84,21 +98,21 @@
         <div class="col-md">
           <div class="course-card">
             <div class="course-title-div">
-              <h1>JS</h1>
+              <h1>Javascript</h1>
             </div>
             <div class="title-line"></div>
-            <div class="course-desc">Learn JS free course</div>
+            <div class="course-desc">Learn Javascript free course</div>
             <a href="./pages/js.html"><button>Course</button></a>
           </div>
         </div>
         <div class="col-md">
           <div class="course-card">
             <div class="course-title-div">
-              <h1>JAVA</h1>
+              <h1>Mysql</h1>
             </div>
             <div class="title-line"></div>
-            <div class="course-desc">Learn JAVA free course</div>
-            <a href="./pages/java.html"><button>Course</button></a>
+            <div class="course-desc">Learn Mysql free course</div>
+            <a href="./pages/mysql.html"><button>Course</button></a>
           </div>
         </div>
       </div>
@@ -106,17 +120,27 @@
         <div class="col-md">
           <div class="course-card">
             <div class="course-title-div">
-              <h1>BOOSTRAP</h1>
+              <h1>DBMS</h1>
             </div>
             <div class="title-line"></div>
-            <div class="course-desc">Learn BOOSTRAP free course</div>
-            <a href="./pages/boostrap.html"><button>Course</button></a>
+            <div class="course-desc">Learn DBMS free course</div>
+            <a href="./pages/html_page.html"><button>Course</button></a>
           </div>
         </div>
         <div class="col-md">
           <div class="course-card">
             <div class="course-title-div">
-              <h1>RUBY ON RAILS</h1>
+              <h1>Java</h1>
+            </div>
+            <div class="title-line"></div>
+            <div class="course-desc">Learn Java free course</div>
+            <a href="./pages/css.html"><button>Course</button></a>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="course-card">
+            <div class="course-title-div">
+              <h1>Ruby on Rails</h1>
             </div>
             <div class="title-line"></div>
             <div class="course-desc">Learn RUBY ON RAILS free course</div>
@@ -126,11 +150,23 @@
         <div class="col-md">
           <div class="course-card">
             <div class="course-title-div">
-              <h1>MYSQL</h1>
+              <h1>Testing</h1>
             </div>
             <div class="title-line"></div>
-            <div class="course-desc">Learn MYSQL free course</div>
+            <div class="course-desc">Learn Testing free course</div>
             <a href="./pages/mysql.html"><button>Course</button></a>
+          </div>
+        </div>
+      </div>
+      <div class="row cards-row">
+        <div class="col-md">
+          <div class="course-card">
+            <div class="course-title-div">
+              <h1>Computer Fundamentals</h1>
+            </div>
+            <div class="title-line"></div>
+            <div class="course-desc">Learn BOOSTRAP free course</div>
+            <a href="./pages/boostrap.html"><button>Course</button></a>
           </div>
         </div>
       </div>
