--- a/index.html
+++ b/index.html
@@ -1,188 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta tags -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Website title -->
-    <title>Tamiltechy</title>
+<head>
+  <!-- Meta tags -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Link style -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+  <!-- Website title -->
+  <title>Tamiltechy</title>
 
-    <!-- Link boostrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+  <!-- Link style -->
+  <link rel="stylesheet" href="./assets/css/style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Link boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 
-    <link
-      rel="stylesheet"
-      href="https://kit.fontawesome.com/55581d092f.css"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body class="main">
-    <!-- Header -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-          <div class="logo">TAMILTECHY.</div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse nav-menu-text" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Courses</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Exercise</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <!-- link google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&display=swap" rel="stylesheet" />
 
-    <!-- Main section -->
-    <section class="container-fluid bannar-section">
-      <div class="row row-class">
-        <div class="col-md">
-            <div class="main-content">
+  <!-- link fontawesome -->
+  <link rel="stylesheet" href="https://kit.fontawesome.com/55581d092f.css" crossorigin="anonymous" />
+
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+
+  <script>
+    $(function () {
+      $("#header").load("./common/header.html");
+      $("#footer").load("./common/footer.html");
+    });
+  </script>
+</head>
+
+<body>
+  <!-- Header -->
+  <header id="header"></header>
+
+  <!-- bannar section -->
+  <section class="container-fluid bannar-section">
+    <div class="row row-class">
+      <div class="col-md">
+        <div class="main-content">
           <div class="center-text-content">
             Learning together even when we are apart
             <div class="main_content_line"></div>
             <a href="#section-2"><button>courses</button></a>
-          </div></div>
-        </div>
-        <div class="col-md image-div">
-          <img src="./assets/images/banner_image.png" height="90%">
+          </div>
         </div>
       </div>
-    </section>
-    <section class="container section-2" id="section-2">
-      <div class="row cards-row">
-        <div class="col-md">
+      <div class="col-md image-div">
+        <img src="./assets/images/banner_image.png" height="100%" />
+      </div>
+    </div>
+  </section>
+
+  <!-- course section -->
+  <section class="container section-2" id="section-2">
+    <div class="container text-center">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>HTML</h1>
+            <div class="icon-div">
+              <img src="./assets/images/html_bannar.jpg" alt="html courses" width="100%" />
             </div>
-            <div class="title-line"></div>
             <div class="course-desc">Learn HTML free course</div>
-            <a href="./pages/html_page.html"><button>Course</button></a>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
-        <div class="col-md">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>CSS</h1>
+            <div class="icon-div">
+              <img src="./assets/images/js_bannar.jpg" alt="javascript courses" width="100%" />
             </div>
-            <div class="title-line"></div>
-            <div class="course-desc">Learn CSS free course</div>
-            <a href="./pages/css.html"><button>Course</button></a>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="course-card">
-            <div class="course-title-div">
-              <h1>Javascript</h1>
-            </div>
-            <div class="title-line"></div>
             <div class="course-desc">Learn Javascript free course</div>
-            <a href="./pages/js.html"><button>Course</button></a>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
-        <div class="col-md">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>Mysql</h1>
+            <div class="icon-div">
+              <img src="./assets/images/css_bannar.jpg" alt="css courses" width="100%" />
             </div>
-            <div class="title-line"></div>
-            <div class="course-desc">Learn Mysql free course</div>
-            <a href="./pages/mysql.html"><button>Course</button></a>
+            <div class="course-desc">Learn CSS free course</div>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
-      </div>
-      <div class="row cards-row">
-        <div class="col-md">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>DBMS</h1>
+            <div class="icon-div">
+              <img src="./assets/images/java_bannar.jpg" alt="java courses" width="100%" />
             </div>
-            <div class="title-line"></div>
-            <div class="course-desc">Learn DBMS free course</div>
-            <a href="./pages/html_page.html"><button>Course</button></a>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="course-card">
-            <div class="course-title-div">
-              <h1>Java</h1>
-            </div>
-            <div class="title-line"></div>
             <div class="course-desc">Learn Java free course</div>
-            <a href="./pages/css.html"><button>Course</button></a>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
-        <div class="col-md">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>Ruby on Rails</h1>
+            <div class="icon-div">
+              <img src="./assets/images/dbms_bannar.jpg" alt="dbms courses" width="100%" />
             </div>
-            <div class="title-line"></div>
-            <div class="course-desc">Learn RUBY ON RAILS free course</div>
-            <a href="./pages/ruby_on_rails.html"><button>Course</button></a>
+            <div class="course-desc">Learn DBMS free course</div>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
-        <div class="col-md">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>Testing</h1>
+            <div class="icon-div">
+              <img src="./assets/images/mysql_bannar.jpg" alt="Mysql courses" width="100%" />
             </div>
-            <div class="title-line"></div>
+            <div class="course-desc">Learn Mysql free course</div>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="course-card">
+            <div class="icon-div">
+              <img src="./assets/images/testing_bannar.jpg" alt="testing_courses" width="100%" />
+            </div>
             <div class="course-desc">Learn Testing free course</div>
-            <a href="./pages/mysql.html"><button>Course</button></a>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
-      </div>
-      <div class="row cards-row">
-        <div class="col-md">
+        <div class="col">
           <div class="course-card">
-            <div class="course-title-div">
-              <h1>Computer Fundamentals</h1>
+            <div class="icon-div">
+              <img src="./assets/images/ror_bannar.jpg" alt="ruby_on_rails_courses" width="100%" />
             </div>
-            <div class="title-line"></div>
-            <div class="course-desc">Learn BOOSTRAP free course</div>
-            <a href="./pages/boostrap.html"><button>Course</button></a>
+            <div class="course-desc">Learn Ruby on Rails free course</div>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="course-card">
+            <div class="icon-div">
+              <img src="./assets/images/cf_bannar.jpg" alt="Fundamentals_of_computer_courses" width="100%" />
+            </div>
+            <div class="course-desc">Learn Fundamentals of computer free course</div>
+            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
       </div>
-    </section>
-    <footer class="main-footer">
-        <h6>&copy; Copyright 2023, Example Corporation</h6>
-    </footer>
+    </div>
+  </section>
+  <footer class="main-footer" id="footer"></footer>
 
-    <!-- Link boostrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Link boostrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 
-    <!-- link js file -->
-    <script src="./assets/js/main.js"></script>
-  </body>
+  <!-- link js file -->
+  <script src="./assets/js/main.js"></script>
+</body>
+
 </html>
