--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/html_bannar.jpg" alt="html courses" width="100%" />
+              <img src="./assets/images/html_bannar.jpeg" alt="html courses" width="100%" />
             </div>
             <div class="course-desc">Learn HTML free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -74,7 +74,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/js_bannar.jpg" alt="javascript courses" width="100%" />
+              <img src="./assets/images/js_bannar.jpeg" alt="javascript courses" width="100%" />
             </div>
             <div class="course-desc">Learn Javascript free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -83,7 +83,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/css_bannar.jpg" alt="css courses" width="100%" />
+              <img src="./assets/images/css_bannar.jpeg" alt="css courses" width="100%" />
             </div>
             <div class="course-desc">Learn CSS free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -92,7 +92,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/java_bannar.jpg" alt="java courses" width="100%" />
+              <img src="./assets/images/java_bannar.jpeg" alt="java courses" width="100%" />
             </div>
             <div class="course-desc">Learn Java free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -101,7 +101,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/dbms_bannar.jpg" alt="dbms courses" width="100%" />
+              <img src="./assets/images/dbms_bannar.jpeg" alt="dbms courses" width="100%" />
             </div>
             <div class="course-desc">Learn DBMS free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -110,7 +110,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/mysql_bannar.jpg" alt="Mysql courses" width="100%" />
+              <img src="./assets/images/mysql_bannar.jpeg" alt="Mysql courses" width="100%" />
             </div>
             <div class="course-desc">Learn Mysql free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -119,7 +119,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/testing_bannar.jpg" alt="testing_courses" width="100%" />
+              <img src="./assets/images/testing_bannar.jpeg" alt="testing_courses" width="100%" />
             </div>
             <div class="course-desc">Learn Testing free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -128,7 +128,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/ror_bannar.jpg" alt="ruby_on_rails_courses" width="100%" />
+              <img src="./assets/images/ror_bannar.jpeg" alt="ruby_on_rails_courses" width="100%" />
             </div>
             <div class="course-desc">Learn Ruby on Rails free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
@@ -137,7 +137,7 @@
         <div class="col">
           <div class="course-card">
             <div class="icon-div">
-              <img src="./assets/images/cf_bannar.jpg" alt="Fundamentals_of_computer_courses" width="100%" />
+              <img src="./assets/images/cf_bannar.jpeg" alt="Fundamentals_of_computer_courses" width="100%" />
             </div>
             <div class="course-desc">Learn Fundamentals of computer free course</div>
             <a href="./pages/css.html"><button class="course-btn">Course</button></a>
