--- a/common/header.html
+++ b/common/header.html
@@ -11,7 +11,10 @@
             <a class="nav-link active" aria-current="page" href="#">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Exercise</a>
+            <a class="nav-link" href="#">Exercises</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cheat Sheet</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
