--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="container-fluid bannar-section">
     <div class="row row-class">
       <div class="col-md">
-        <div class="main-content">
+        <div class="pages-main">
           <div class="center-text-content">
             Learning together even when we are apart
             <div class="main_content_line"></div>
@@ -79,7 +79,7 @@
               <img src="./assets/images/js_bannar.jpeg" alt="javascript courses" width="100%" />
             </div>
             <div class="course-desc">Learn Javascript free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+            <a href="./pages/js.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
         <div class="col">
@@ -106,7 +106,7 @@
               <img src="./assets/images/dbms_bannar.jpeg" alt="dbms courses" width="100%" />
             </div>
             <div class="course-desc">Learn DBMS free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+            <a href="./pages/dbms.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
         <div class="col">
@@ -115,7 +115,7 @@
               <img src="./assets/images/mysql_bannar.jpeg" alt="Mysql courses" width="100%" />
             </div>
             <div class="course-desc">Learn Mysql free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+            <a href="./pages/mysql.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
         <div class="col">
@@ -124,7 +124,7 @@
               <img src="./assets/images/testing_bannar.jpeg" alt="testing_courses" width="100%" />
             </div>
             <div class="course-desc">Learn Testing free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+            <a href="./pages/testing.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
         <div class="col">
@@ -133,7 +133,7 @@
               <img src="./assets/images/ror_bannar.jpeg" alt="ruby_on_rails_courses" width="100%" />
             </div>
             <div class="course-desc">Learn Ruby on Rails free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+            <a href="./pages/ruby_on_rails.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
         <div class="col">
@@ -141,8 +141,17 @@
             <div class="icon-div">
               <img src="./assets/images/cf_bannar.jpeg" alt="Fundamentals_of_computer_courses" width="100%" />
             </div>
-            <div class="course-desc">Learn Fundamentals of computer free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
+            <div class="course-desc">computer Fundamental course</div>
+            <a href="./pages/cf.html"><button class="course-btn">Course</button></a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="course-card">
+            <div class="icon-div">
+              <img src="./assets/images/linux_bannar.jpeg" alt="linux_courses" width="100%" />
+            </div>
+            <div class="course-desc">Learn Linux free course</div>
+            <a href="./pages/linux.html"><button class="course-btn">Course</button></a>
           </div>
         </div>
       </div>
