--- a/pages/html_page.html
+++ b/pages/html_page.html
@@ -6,15 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tamiltechy | HTML</title>
 
-    <link rel="stylesheet" href="./../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+
+      <!-- Link boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+
+    <script>
+      $(function () {
+        $("#header").load("../common/header.html");
+      });
+    </script>
   </head>
   <body>
     <!-- Header -->
-    <header class="main-header">
-      <nav class="main-nav">
-        <div class="logo">TAMILTECHY.</div>
-      </nav>
-    </header>
+    <header id="header"></header>
     <section class="main-content">
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vRZ22kP7STbcQiNGHRCBO844DKyCUsQUwGistuWnAxHDlknBwlRLl-mESlU8KM6DA/embed?start=true&loop=true&delayms=3000"
