--- a/index.html
+++ b/index.html
@@ -1,184 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Meta tags -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <!-- Meta tags -->
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Website title -->
+    <title>Tamiltechy</title>
 
-  <!-- Website title -->
-  <title>Tamiltechy</title>
+    <!-- Link style -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
-  <!-- Link style -->
-  <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- Link boostrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
 
-  <!-- Link boostrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+    <!-- link google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- link google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&display=swap" rel="stylesheet" />
+    <!-- link fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://kit.fontawesome.com/55581d092f.css"
+      crossorigin="anonymous"
+    />
 
-  <!-- link fontawesome -->
-  <link rel="stylesheet" href="https://kit.fontawesome.com/55581d092f.css" crossorigin="anonymous" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-
-  <script>
-    $(function () {
-      $("#header").load("./common/header.html");
-      $("#footer").load("./common/footer.html");
-    });
-  </script>
-
-<script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-</head>
-
-<body>
-  <!-- Header -->
-  <header id="header"></header>
-
-  <!-- bannar section -->
-  <section class="container-fluid bannar-section">
-    <div class="row row-class">
-      <div class="col-md">
-        <div class="pages-main">
-          <div class="center-text-content">
-            Learning together even when we are apart
-            <div class="main_content_line"></div>
-            <a href="#section-2"><button>courses</button></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md image-div">
-        <img src="./assets/images/banner_image.png" height="100%" />
-      </div>
-    </div>
-  </section>
-
-  <!-- course section -->
-  <section class="container section-2" id="section-2">
-    <div class="container text-center">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/html_bannar.jpeg" alt="html courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn HTML free course</div>
-            <a href="./pages/html_page.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/js_bannar.jpeg" alt="javascript courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn Javascript free course</div>
-            <a href="./pages/js.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/css_bannar.jpeg" alt="css courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn CSS free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/java_bannar.jpeg" alt="java courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn Java free course</div>
-            <a href="./pages/css.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/dbms_bannar.jpeg" alt="dbms courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn DBMS free course</div>
-            <a href="./pages/dbms.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/mysql_bannar.jpeg" alt="Mysql courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn Mysql free course</div>
-            <a href="./pages/mysql.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/testing_bannar.jpeg" alt="testing_courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn Testing free course</div>
-            <a href="./pages/testing.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/ror_bannar.jpeg" alt="ruby_on_rails_courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn Ruby on Rails free course</div>
-            <a href="./pages/ruby_on_rails.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/cf_bannar.jpeg" alt="Fundamentals_of_computer_courses" width="100%" />
-            </div>
-            <div class="course-desc">computer Fundamental course</div>
-            <a href="./pages/cf.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-        <div class="col">
-          <div class="course-card">
-            <div class="icon-div">
-              <img src="./assets/images/linux_bannar.jpeg" alt="linux_courses" width="100%" />
-            </div>
-            <div class="course-desc">Learn Linux free course</div>
-            <a href="./pages/linux.html"><button class="course-btn">Course</button></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="readme"></div>
-  </section>
-  <footer class="main-footer" id="footer"></footer>
-
-  <!-- Link boostrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
-
-  <!-- link js file -->
-  <script src="./assets/js/main.js"></script>
-
-  <script>
-    // Load the contents of your README file
-    fetch('https://github.com/Prasanna-dot/java/blob/Main/README.md')
-      .then(response => response.text())
-      .then(text => {
-        // Convert the Markdown to HTML using marked.js
-        const html = marked(text);
-        // Insert the HTML into the README container
-        document.querySelector('#readme').innerHTML = html;
+    <script>
+      $(function () {
+        $("#header").load("./common/header.html");
+        $("#footer").load("./common/footer.html");
       });
-  </script>
-</body>
+    </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
+  </head>
+
+  <body>
+    <!-- Header -->
+    <header id="header"></header>
+
+    <!-- bannar section -->
+    <section class="container-fluid bannar-section">
+      <div class="row row-class">
+        <div class="col-md">
+          <div class="pages-main">
+            <div class="center-text-content">
+              Learning together even when we are apart
+              <div class="main_content_line"></div>
+              <a href="#section-2"><button>courses</button></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md image-div">
+          <img src="./assets/images/banner_image.png" height="100%" />
+        </div>
+      </div>
+    </section>
+
+    <!-- course section -->
+    <section class="container section-2" id="section-2">
+      <div class="container text-center">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/html_bannar.jpeg"
+                  alt="html courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn HTML free course</div>
+              <a href="./pages/html_page.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/js_bannar.jpeg"
+                  alt="javascript courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn Javascript free course</div>
+              <a href="./pages/js.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/css_bannar.jpeg"
+                  alt="css courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn CSS free course</div>
+              <a href="./pages/css.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/java_bannar.jpeg"
+                  alt="java courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn Java free course</div>
+              <a href="./pages/css.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/dbms_bannar.jpeg"
+                  alt="dbms courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn DBMS free course</div>
+              <a href="./pages/dbms.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/mysql_bannar.jpeg"
+                  alt="Mysql courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn Mysql free course</div>
+              <a href="./pages/mysql.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/testing_bannar.jpeg"
+                  alt="testing_courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn Testing free course</div>
+              <a href="./pages/testing.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/ror_bannar.jpeg"
+                  alt="ruby_on_rails_courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn Ruby on Rails free course</div>
+              <a href="./pages/ruby_on_rails.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/cf_bannar.jpeg"
+                  alt="Fundamentals_of_computer_courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">computer Fundamental course</div>
+              <a href="./pages/cf.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+          <div class="col">
+            <div class="course-card">
+              <div class="icon-div">
+                <img
+                  src="./assets/images/linux_bannar.jpeg"
+                  alt="linux_courses"
+                  width="100%"
+                />
+              </div>
+              <div class="course-desc">Learn Linux free course</div>
+              <a href="./pages/linux.html"
+                ><button class="course-btn">Course</button></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="readme"></div>
+    </section>
+    <footer class="main-footer" id="footer"></footer>
+
+    <!-- Link boostrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- link js file -->
+    <script src="./assets/js/main.js"></script>
+  </body>
 </html>
