--- a/pages/java.html
+++ b/pages/java.html
@@ -7,12 +7,19 @@
     <title>Tamiltechy | HTML</title>
 
     <link rel="stylesheet" href="./../assets/css/style.css" />
-      <!-- Link boostrap -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
-    
-        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
+    <!-- Link boostrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
     <script>
       $(function () {
         $("#header").load("./../common/header.html");
@@ -21,7 +28,7 @@
   </head>
   <body>
     <!-- Header -->
-     <header id="header"></header>
+    <header id="header"></header>
     <section class="main-content">
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vSFPKwyypSdrRJnhfHk5PF_GV1Dn14GWxEDv3g1udB9HfmfEOHnZHZp-XXryDx1GQ/embed?start=true&loop=true&delayms=3000"
@@ -33,5 +40,12 @@
         webkitallowfullscreen="true"
       ></iframe>
     </section>
+
+    <!-- Link boostrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
