--- a/common/header.html
+++ b/common/header.html
@@ -1,25 +1,95 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
-      <div class="logo"><a href="./../index.html">TAMILTECHY.</a></div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse nav-menu-text" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Courses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Exercises</a>
-          </li>
-          <li class="nav-item">
+  <div class="container">
+    <div class="logo"><a href="./../index.html">TAMILTECHY.</a></div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="collapse navbar-collapse nav-menu-text"
+      id="navbarSupportedContent"
+    >
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-pills">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Courses
+          </a>
+          <ul class="dropdown-menu" id="courses-dropdown">
+            <li>
+              <a class="dropdown-item" href="./../courses/html-courses.html"
+                ><i class="fa-brands fa-html5"></i> Html</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="./../courses/css-courses.html"
+                ><i class="fa-brands fa-css3-alt"></i> Css</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="./../courses/javascript-courses.html"
+                ><i class="fa-brands fa-js"></i> Javascript</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="./../courses/java-courses.html"
+                ><i class="fa-brands fa-java"></i> Java</a
+              >
+            </li>
+            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <a class="dropdown-item" href="../index.html#courses">More..</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Exercises
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="./../exercises/java-exercises.html"
+                ><i class="fa-brands fa-java"></i> Java</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="./../exercises/mysql-exercises.html"
+                ><i class="fa-solid fa-code"></i> Mysql</a
+              >
+            </li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#courses">More..</a></li>
+          </ul>
+        </li>
+        <!-- <li class="nav-item">
             <a class="nav-link" href="#">Cheat Sheet</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
+          </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
